--- a/EofA Website/eofa-style.css
+++ b/EofA Website/eofa-style.css
@@ -1,18 +1,14 @@
 body {
 	padding-top: 0;
+	background-color: #CCCCCC;
 }
 
 .wrapper {
-  position: relative;
-  margin: 0 auto;
-  height:100px;
-}
-
-#masthead .wrapper {
   width: 100%;
   padding: 0;
   border: 0;
   position: relative;
+  clear: both;
   top: 0;
   left: 0;
   background-color: #00338D;
@@ -104,6 +100,7 @@ nav .icon {
 .nav {
   margin-left:10px;
   margin-top:19px;
+  margin-bottom: 35px;
 
 }
 
@@ -150,16 +147,10 @@ nav .icon {
 #flyer {
   background-color: #EEEEEE;
   background-image: url(eofa-background-streetperf.jpg);
-  background-position: top;
+  background-position: center center;
 }
-
-.flyerheader {
-  padding-top:20px;
-}
-
 
 .flyerheader h1 {
-  padding-top:140px;
   text-align:right;
   color: #A40800;
   line-height:56px;
