Added a txt version, copied the flyer into a poster pdf, and updated css and index.  Please do feel free to re-edit, but please don't put in things like
<header>
</header>
<article>
</article>

Those aren't html tags, I'm not sure what they are... :)

--- a/EofA Website/eofa-style.css
+++ b/EofA Website/eofa-style.css
@@ -3,6 +3,15 @@ body {
 	background-color: #CCCCCC;
 }
 
+p {
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+ul {
+    padding:10px;
+}
+
 .wrapper {
   width: 100%;
   padding: 0;
@@ -60,8 +69,8 @@ nav a {
 .caption-box {
   padding-top:0px;
   padding-bottom:0px;
-  margin-left:50%;
-  margin-right:10%;
+  margin-left:10%;
+  margin-right:50%;
 }
 
 .caption-arrow-top {
@@ -80,6 +89,17 @@ nav a {
 
 .caption-arrow-leftspacer {
   padding-left: 15px;
+}
+
+.caption-arrow-right {
+  background-position-y: 75%;
+  background-image: url(eofa-captionarrow-right.png);
+  background-repeat: no-repeat;
+  padding-right: 15px;
+}
+
+.caption-arrow-rightspacer {
+  padding-right 15px;
 }
 
 .caption-text {
@@ -222,4 +242,8 @@ h2 {
   width:100%;
   padding-top: 30px;
   padding-bottom: 30px;
+}
+
+#section {
+  margin-left:50px;
 }
